# ctrlcore_web

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
config/: web_modules.yaml
docs/superpowers/specs/: 2026-07-20-payload-gpio-level-design.md
launch/: ctrlcore_web.launch.py
scripts/: start_ctrlcore_debug_stack.sh  start_ctrlcore_web.sh  stop_ctrlcore_debug_stack.sh
sealien_ctrlcore_web/: __init__.py  http_server.py  web_node.py
sealien_ctrlcore_web/core/: base_module.py  registry.py
sealien_ctrlcore_web/modules/bme280/: backend.py
sealien_ctrlcore_web/modules/bms/: backend.py  bms_decode.py
sealien_ctrlcore_web/modules/depth/: backend.py
sealien_ctrlcore_web/modules/elb105/: backend.py
sealien_ctrlcore_web/modules/gs/: __init__.py  backend.py
sealien_ctrlcore_web/modules/height/: backend.py
sealien_ctrlcore_web/modules/link/: backend.py
sealien_ctrlcore_web/modules/m1/: backend.py
sealien_ctrlcore_web/modules/mixed_io/: backend.py
sealien_ctrlcore_web/modules/payload_en/: __init__.py  backend.py
sealien_ctrlcore_web/modules/pitch_motor/: backend.py
sealien_ctrlcore_web/modules/plunger_pump/: __init__.py  backend.py
sealien_ctrlcore_web/modules/thruster/: backend.py
sealien_ctrlcore_web/modules/usr_sat03/: backend.py
sealien_ctrlcore_web/modules/wire_displacement/: backend.py
test/: payload_en_level.test.mjs
web/: index.html  modules.manifest.json  style.css
web/core/: api.js  shell.js
web/modules/bme280/: panel.js
web/modules/bms/: panel.js
web/modules/depth/: panel.js
web/modules/elb105/: panel.js
(+12 files in other folders)
