<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sealien_ctrlcore_web</name>
  <version>0.1.0</version>
  <description>模块化 MCU 调试 Web：订阅 communicationservice ROS Topic 并展示</description>
  <maintainer email="joey@sealien.cn">joey</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>sealien_ctrlpilot_msgmanagement</exec_depend>
  <exec_depend>sealien_ctrlpilot_actuator</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
